--- a/Eksamensmappa/css/style.css
+++ b/Eksamensmappa/css/style.css
@@ -1,4 +1,3 @@
-/* Global styles */
 body {
     font-family: sans-serif;
     line-height: 1.6;
@@ -13,7 +12,23 @@ header {
     background-color: #f5f5f5;
 }
 
+#logo img{
+    border-radius: 50%;
+    height: 85px;
+    width: 85px;
+}
+
 nav a {
     margin: 0 10px;
+    text-decoration: none;
+    color: black;
 }
+
+#main-grid #global-header ul {
+    list-style: none;
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+  }
 
