--- a/Eksamensmappa/css/style.css
+++ b/Eksamensmappa/css/style.css
@@ -30,5 +30,14 @@ nav a {
     flex-direction: row;
     align-items: center;
     gap: 1rem;
+    text-decoration: none;
+    color: black;
   }
 
+#main-grid #global-header ul li a:hover {
+    color: black; /
+}
+
+#main-grid #global-header ul li a:visited {
+    color: black;
+}
