--- a/Eksamensmappa/css/style.css
+++ b/Eksamensmappa/css/style.css
@@ -39,7 +39,6 @@ body {
     display: flex;
     align-items: center;
     position: relative; /*lar oss bruke absolutt posisjonering for ikonet*/
-    
 }
 
 #global-header form input {
@@ -114,10 +113,6 @@ main {
 
 .slides {
     display: flex;
-    scroll-snap-type: x mandatory; /*gjør det mandatory å snap-scrolle til siden(2 fingre/dra med musepeker)*/
-    overflow-x: auto; /*kan gå horisontalt over hvis innhold er bredere enn containere*/
-    scroll-behavior: smooth; /*skifte blir smooth mellom slidene*/
-    
 }
 
 .slide {
@@ -148,7 +143,7 @@ main {
     text-align: right;
     position: absolute;
     color: white; 
-    font-size: 2.2rem;
+    font-size: clamp(1.5rem, 2.5vw, 3rem);
     top: 22%; 
     left: 13%;
     width: 80%;
@@ -161,6 +156,7 @@ main {
     position: absolute;
     color: white; 
     font-size: 1.1rem;
+    font-size: clamp(0.8rem, 1.5vw, 2rem);
     top: 40%; 
     left: 13%;
     width: 80%;
@@ -200,9 +196,10 @@ main {
 /*les mer knappen*/
 .btn-slider { 
     position: absolute;
-    bottom: 40px;
-    left: 78%;
-    padding: 1.4rem;
+    font-size: 0.8rem;
+    bottom: 20px;
+    left: 75%;
+    padding: 0.4rem;
     background-color: rgb(255, 255, 255);
     text-decoration: none;
     color: black;
@@ -211,7 +208,7 @@ main {
   }
 
 .btn-product {
-    margin: 2rem;
+    margin: 0.2rem;
     text-decoration: none;
     font-size: 15px;
     color: black;
@@ -220,19 +217,21 @@ main {
     padding: 0.8rem;
 }
 
-.btn-product:nth-child(3){
+.btn-product:nth-child(1){
     background-color: black;
     color: white;
 }
 
-#product-buttons p{
+
+/*"En smakebit.." tekst får mer plass*/
+#product-title p{
     margin-bottom: 2rem;
 }
 
 /*popular products-gallery*/
 #product-gallery {
     display: grid;
-    gap: 20px;
+    gap: 10px;
     justify-items: center;
     padding-top: 20px;
 }
@@ -240,11 +239,11 @@ main {
 /*styling for hvert produkt*/
 .product-item {
     background-color: #fff;
-    padding: 20px;
-    width: 100%;
+    padding: 10px;
+    min-width: 80%;
+    max-width: 100%;
     text-align: center;
     position: relative;
-
 }
 
 /*bildene*/
@@ -311,11 +310,11 @@ main {
 
 /*hjerteknapp*/
 .product-item i.fa-heart {
-    font-size: 4.5rem;
+    font-size: 4rem;
     color: #aaa;
     position: absolute;
-    top: 50px;
-    right: 80px;
+    top: 40px;
+    right: 60px;
 }
 
 .review-count {
@@ -332,6 +331,7 @@ main {
     grid-area: footer; /*setter grid-area footer*/
 }
 
+/*generl layout av footer*/
 #global-footer {
     display: grid;
     justify-content: space-between; 
@@ -339,13 +339,27 @@ main {
     background-color: white;
     align-items:center;
     text-align: left;
+    grid-template-columns: repeat(2, 1fr);
 }
 
 /*logo i footer*/
 #global-footer img{
     border-radius: 50%;
-    height: 85px;
-    width: 85px;
+    height: 100px;
+    width: 100px;
+    margin-top: 1.4rem;
+}
+
+/*border mellom logo og annmeldelser over, uten bruk av bakgrunnsfarge*/
+.top{
+    border-top:2px #1a1919 solid;
+    padding: 1rem;
+}
+
+/*placement i footer*/
+.top,
+.social-media{
+    grid-column: 1 / -1; /*setter logo og socialemedier øverst og nederst i footer med grid*/
 }
 
 .information {
@@ -353,8 +367,13 @@ main {
 }
 
 .information li {
-    margin: 0.5rem 0;
+    margin: 0.5rem 0rem 0rem -2.3rem;
     list-style: none;
+}
+
+.shortcuts{
+    text-align: right;
+    margin-bottom: 3.2rem;
 }
 
 .shortcuts ul {
@@ -363,11 +382,7 @@ main {
 }
 
 .shortcuts ul li {
-    margin: 0.25rem 0;
-}
-
-.shortcuts ul li a:hover {
-    font-weight: bold;
+    margin: 0.5rem 0;
 }
 
 .shortcuts ul li a{
@@ -379,7 +394,7 @@ main {
     list-style: none;
     padding: 0;
     display: flex;
-    gap: 1.5rem;
+    gap: 1.5rem; /*avstanden mellom logoene*/
 }
 
 .social-media ul li {
@@ -395,7 +410,7 @@ main {
 
 
 
-@media only screen and (min-width: 701px) {
+@media only screen and (min-width: 426px) { /*setter mobilstørrelse alt under 426px*/
 
     /*endrer grid-malen for skjermer større enn 699px til desktop*/
     /*definerer main-container som inneholder header, main og footer*/
@@ -416,7 +431,7 @@ main {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        background-color: #f5f5f5;
+        background-color: #dcdcdc;
     }
 
     /*hjem, produkt osv. knappene*/
@@ -456,15 +471,27 @@ main {
 
 /*--------------------------*/
 
+    .slides{
+        scroll-snap-type: x mandatory; /*gjør det mandatory å snap-scrolle til siden(2 fingre/dra med musepeker)*/
+        overflow-x: auto; /*kan gå horisontalt over hvis innhold er bredere enn containere*/
+        scroll-behavior: smooth; /*skifte blir smooth mellom slidene*/
+    }
 
     .slide:nth-child(2),.slide:nth-child(3) {
         display: flex; /*viser alle sliders */
     }
 
-    .btn-slider{
-        position: absolute;
+    .btn-slider { 
+        font-size: 1.2rem;
+        padding: 1.4rem;
         bottom: 80px;
-        left: 82%;
+        left: 80%;
+      }
+
+    .btn-product {
+        margin: 1rem;
+        font-size: 15px;
+        padding: 0.8rem;
     }
 
     .btn-product:hover{
@@ -494,5 +521,51 @@ main {
 
     .product-item i.fa-heart:hover {
         color: rgb(199, 38, 38);
+    }
+
+
+/*-------------------------------------------*/
+
+    #global-footer{
+        background-color: #dcdcdc;
+        grid-template-columns: repeat(3, 1fr); /*tre kolonner for større skjermer */
+    }
+
+    .top{
+        grid-column: 1 / -1;
+    }
+
+    .information{
+        grid-column: 1;
+        margin-left: 1rem;
+    }
+
+    .shortcuts{
+        grid-column: 2;
+        text-align: left;
+        margin-bottom: 0rem;
+    }
+    
+    .social-media{
+        grid-column: 3;
+        text-align: left;
+        margin-right: 1rem;
+    }
+
+
+    .top{
+        border-top:0px #1a1919 solid;
+    }
+
+    .shortcuts ul li a:hover {
+        font-weight: bold; /*gjør knappene mer tydelige når de blir hooverd*/
+    }
+
+    .social-media ul li a i.fa-facebook, .social-media ul li a i.fa-pinterest, .social-media ul li a i.fa-instagram, .social-media ul li a i.fa-linkedin {
+        transition: transform 0.3s ease; /*glatt overgangseffekt*/
+    }
+
+    .social-media ul li a:hover i.fa-facebook, .social-media ul li a:hover i.fa-pinterest, .social-media ul li a:hover i.fa-instagram, .social-media ul li a:hover i.fa-linkedin {
+        transform: scale(1.5); /*øker størrelsen med 50%*/
     }
 }
