--- a/Eksamensmappa/css/style.css
+++ b/Eksamensmappa/css/style.css
@@ -321,6 +321,25 @@ main {
     margin-right: 1rem;
 }
 
+.categories{
+    display: grid;
+}
+
+.categories figcaption {
+    color: white;
+    font-size: 4.5rem;
+    font-weight: bold;
+    text-align: center;
+    top: 50%;
+    position: relative;
+}
+
+.categories img{
+    width: 100%;
+    height: 90%;
+    border-radius: 8%;
+}
+
 
 
 /*------------------------------------*/
