--- a/Eksamensmappa/css/style.css
+++ b/Eksamensmappa/css/style.css
@@ -31,7 +31,7 @@ body {
 }
 
 #main-grid h2{
-    font-size: 30px;
+    font-size: 2.2rem;
 }
 
 /*searchbaren*/
@@ -103,9 +103,10 @@ body {
 main {
     grid-area: main; /*setter grid-area main*/
 }
+
 .slide-container {
     padding: 0rem;
-    width: 80%;  
+    width: 100%;  
     margin: auto;
     position: relative;
     background-color: white;
@@ -127,7 +128,7 @@ main {
 /*endrer bildene på slideren*/
 .slide img {
     width: 90%;
-    height: 90%;
+    height: 100%;
     border-radius: 3%;
     object-fit: cover;
 }
@@ -142,10 +143,11 @@ main {
     text-align: right;
     position: absolute;
     color: white; 
-    font-size: clamp(1rem, 2.5vw, 3rem);
-    top: 10%; 
+    font-size: clamp(1.2rem, 2.8vw, 4rem);
+    top: 0; 
     left: 13%;
     width: 80%;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8); /*skygge for mer tekstur og bedre lesbarhet*/
 
 }
 
@@ -154,10 +156,11 @@ main {
     text-align: right;
     position: absolute;
     color: white; 
-    font-size: clamp(0.4rem, 1.5vw, 2rem);
-    top: 35%; 
+    font-size: clamp(0.7rem, 1.5vw, 2rem);
+    top: 20%; 
     left: 13%;
     width: 80%;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
 }
 
 .slide:nth-child(2),.slide:nth-child(3) {
@@ -195,7 +198,7 @@ main {
 .btn-slider { 
     position: absolute;
     font-size: 0.8rem;
-    bottom: 20px;
+    bottom: 15px;
     left: 75%;
     padding: 0.4rem;
     background-color: rgb(255, 255, 255);
@@ -249,7 +252,7 @@ main {
     min-width: 90%;
     max-width: 100%;
     height: auto;
-    border-radius: 10px;
+    border-radius: 6%;
 }
 
 .product-item a{
@@ -321,24 +324,72 @@ main {
     margin-right: 1rem;
 }
 
-.categories{
+/*grid-oppsett for kategoriene*/
+.categories {
     display: grid;
+    grid-template-areas: 
+            "category1"
+            "category2"
+            "category3"
+            "category3"
+            "category4"
+            "category5";
+    gap: 15px; /*luft mellom kategoriene*/
+    margin: 5%;
+    height: auto;
 }
 
+/*selve bildene/figurene med teksten*/
+.categories figure {
+    position: relative;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    border-radius: 6%;
+    border: 0.2px black solid;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.categories img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /*får hele bildet til å fylle området*/
+}
+
+/*category teksten*/
 .categories figcaption {
+    position: absolute;
     color: white;
-    font-size: 4.5rem;
+    font-size: 2.2rem;
     font-weight: bold;
     text-align: center;
-    top: 50%;
-    position: relative;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8); /*skygge for mer tekstur og bedre lesbarhet*/
 }
 
-.categories img{
-    width: 100%;
-    height: 90%;
-    border-radius: 8%;
+/*under er plasseringene for hver enkelt figure i gridområdet*/
+.categories figure:nth-child(1) {
+    grid-area: category1;
 }
+
+.categories figure:nth-child(2) {
+    grid-area: category2;
+}
+
+.categories figure:nth-child(3) {
+    grid-area: category3;
+}
+
+.categories figure:nth-child(4) {
+    grid-area: category4;
+}
+
+.categories figure:nth-child(5) {
+    grid-area: category5;
+}
+
 
 
 
@@ -348,7 +399,7 @@ main {
     grid-area: footer; /*setter grid-area footer*/
 }
 
-/*generl layout av footer*/
+/*generel layout av footer*/
 #global-footer {
     display: grid;
     justify-content: space-between; 
@@ -428,8 +479,8 @@ main {
 
 
 @media only screen and (min-width: 426px) { /*setter mobilstørrelse alt under 426px*/
+                                            /*media only screen tilsier at dette gjelder KUN skjermer, og ikke annet som skrivere eller taleenheter*/
 
-    /*endrer grid-malen for skjermer større enn 699px til desktop*/
     /*definerer main-container som inneholder header, main og footer*/
     #main-grid {
         text-align: center;
@@ -488,6 +539,13 @@ main {
 
 /*--------------------------*/
 
+    #main-grid h2{
+        font-size: 3.2rem;
+    }
+
+    .slide-container {
+        width: 80%; 
+    }
 
     .slides{
         scroll-snap-type: x mandatory; /*gjør det mandatory å snap-scrolle til siden(2 fingre/dra med musepeker)*/
@@ -499,13 +557,26 @@ main {
         scroll-snap-align: center; /*vil automatisk dra deg til en full slide, slik at du ikke blir "stuck" på en av dem forrige*/
     }
 
+    .slide img{
+        height: 90%;
+    }
+
     .slide h3{
-        top: 18%;
+        text-align: right;
+        position: absolute;
+        color: white; 
+        font-size: clamp(1rem, 2.5vw, 3rem);
+        top: 18%; 
+        left: 13%;
+        width: 80%;
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8); /*skygge for mer tekstur og bedre lesbarhet*/
     }
 
     .slide p{
         font-size: clamp(0.7rem, 1.8vw, 2.2rem); /*dynamisk tekststørrelse*/
         top: 40%; 
+        left: 13%;
+        width: 80%;
     }
 
     .slide:nth-child(2),.slide:nth-child(3) {
@@ -555,9 +626,33 @@ main {
         transition: color 0.3s ease;
     }
 
-    .product-item i.fa-heart:hover {
+    .product-item i.fa-heart:hover { /*når hjertet blir hovret over, vil fargen endres til rød*/
         color: rgb(199, 38, 38);
     }
+
+    /*grid-oppsett for kategoriene*/
+    .categories {
+        grid-template-areas: 
+        "category1 category2 category3"
+        "category4 category4 category3"
+        "category4 category4 category5"; /*bruker et 3x3 grid*/
+    }
+
+    /*category teksten*/
+    .categories figcaption {
+        font-size: 2.2rem;
+    }
+
+    .categories figcaption {
+        transition: transform 0.3s ease-in-out;
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
+    }
+    
+    .categories figure:hover figcaption{
+        transform: scale(1.1); /*category teksten får en "forstørrelse" effekt ved hover*/
+        text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.8); /*gir skyggen er sterkere effekt, for å gjøre hover effekten enda mer synelig*/
+    }
+    
 
 
 /*-------------------------------------------*/
@@ -608,4 +703,22 @@ main {
     .social-media ul li a:hover i.fa-facebook, .social-media ul li a:hover i.fa-pinterest, .social-media ul li a:hover i.fa-instagram, .social-media ul li a:hover i.fa-linkedin {
         transform: scale(1.5); /*øker størrelsen med 50%*/
     }
+}
+
+@media only screen and (min-width: 426px) and (max-width: 750px){ /*setter tabletstørrelse alt under 751px fram til 425px*/
+    
+    #main-grid h2{
+        font-size: 2.6rem;
+    }
+
+    .categories {
+        grid-template-areas: 
+        "category1 category2 category2 category3"
+        "category4 category4 category5 category5"; /*bruker et 3x3 grid*/
+    }
+
+    .categories figcaption{
+        font-size: 1.4rem;
+    }
+
 }
