--- a/Eksamensmappa/css/style.css
+++ b/Eksamensmappa/css/style.css
@@ -89,8 +89,11 @@ body {
     align-items: center;
     gap: 1rem;
     text-decoration: none;
-    color: black;
   }
+
+#main-grid #global-header ul li a{
+    color: black;
+}
 
 #main-grid #global-header ul li a:visited {
     color: black;
@@ -539,7 +542,7 @@ main {
 
 /*--------------------------*/
 
-    #main-grid h2{
+    #index #main-grid h2{
         font-size: 3.2rem;
     }
 
@@ -652,6 +655,11 @@ main {
         transform: scale(1.1); /*category teksten får en "forstørrelse" effekt ved hover*/
         text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.8); /*gir skyggen er sterkere effekt, for å gjøre hover effekten enda mer synelig*/
     }
+
+
+/*--------------------------------------------*/
+
+
     
 
 
