--- a/Eksamensmappa/css/style.css
+++ b/Eksamensmappa/css/style.css
@@ -12,8 +12,7 @@ body {
     overflow-x: hidden; /*fjerner og klipper bort innhold som strekker seg utenfor skjermen*/
 }
 
-#main-grid {
-    display: grid;
+.main-grid {
     grid-template-areas: "header" "main" "footer";
     text-align: center;
 }
@@ -26,11 +25,11 @@ body {
     display: grid;
     align-items: center;
     justify-content: center;
-    padding: 1.5rem clamp(1rem,2.5vw, 5rem);
+    padding: clamp(0rem,2.5vw, 5rem);
     background-color: white;
 }
 
-#main-grid h2{
+.main-grid h2{
     font-size: 2.2rem;
 }
 
@@ -65,12 +64,11 @@ body {
     flex-direction: column;
     padding: 1rem;
     align-items: center; /*sørger for at nav-elementene er på samme linje */
-    justify-content: center; /*sentere navigasjonen vertikalt */
     gap: 1rem;
 }
 
 #global-header nav a {
-    margin: 0 10px;
+    margin: 0 clamp(0px, 0.8vw, 15px);
     text-decoration: none;
     color: black;
 }
@@ -82,7 +80,7 @@ body {
 }
 
 /*profil,hjerte og handlekurv ikonene*/
-#main-grid #global-header ul {
+.main-grid #global-header ul {
     list-style: none;
     display:flex;
     flex-direction: row;
@@ -91,11 +89,11 @@ body {
     text-decoration: none;
   }
 
-#main-grid #global-header ul li a{
+.main-grid #global-header ul li a{
     color: black;
 }
 
-#main-grid #global-header ul li a:visited {
+.main-grid #global-header ul li a:visited {
     color: black;
 }
 
@@ -159,8 +157,8 @@ main {
     text-align: right;
     position: absolute;
     color: white; 
-    font-size: clamp(0.7rem, 1.5vw, 2rem);
-    top: 20%; 
+    font-size: clamp(0.55rem, 1.5vw, 2rem);
+    top: 25%; 
     left: 13%;
     width: 80%;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
@@ -218,7 +216,8 @@ main {
     color: black;
     border: 2.5px solid black;  /*svart border rundt produkt knapper*/
     border-radius: 50px;
-    padding: 0.8rem;
+    padding: 0.5rem;
+    background-color: white;
 }
 
 .btn-product:nth-child(1){
@@ -393,10 +392,340 @@ main {
     grid-area: category5;
 }
 
+/*flex-layout for anmeldelsene*/
+#customer-reviews-gallery {
+    display: flex; /*flexbox for horizontal layout*/
+    overflow-x: auto; /*horizontal scrolling*/
+    scroll-behavior: smooth; /*smooth scrolling*/
+    padding: 1.5rem;
+}
 
+/*individuelle anmeldelser*/
+.customer-review-profile {
+    background-color: white;
+    border: 1px solid #e0e0e0;
+    border-radius: 15px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    padding: 1%;
+    text-align: left;
+    margin: 1%;
+    height: 375px;
+    min-width: 250px; 
+    max-width: 300px; 
+}
+
+/*profilbilde*/
+.customer-review-profile img {
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    margin-bottom: 15px;
+}
+
+/*navn*/
+.customer-review-profile h5 {
+    font-size: 1.2rem;
+    margin: 10px 0;
+    text-align: left;
+}
+
+/*stars*/
+.customer-review-profile .stars {
+    display: flex;
+    justify-content: left;
+    list-style: none;
+    padding: 0;
+    margin: 10px 0;
+}
+
+.customer-review-profile .stars li {
+    margin: 0 3px;
+    font-size: 1.2rem;
+}
+
+/*review tekst*/
+.customer-review-profile p {
+    font-size: 0.8rem;
+    color: black;
+    text-align: left;
+    margin-top: 10px;
+}
 
 
 /*------------------------------------*/
+
+/*setter stil for main på produktsiden*/
+.main-produkt{
+    grid-template-areas: "header" "main" "footer";
+    padding-left: 1rem; /*luft venstre side*/
+    padding-right: 1rem; /*luft høyre side*/    
+    margin: 0 auto; /*sentraliser innhold horisontalt*/
+    display: flex;
+    flex-direction: column;
+    grid-template-columns: 1fr 1fr; /*en kolonne for produktinfo, en for bildene*/
+    gap: 1rem;
+}
+
+
+/*styling for breadcrumb*/
+#breadcrumb {
+    text-align: left; /*teksten blir venstrejustert */
+}
+
+#breadcrumb a {
+    font-size: 14px;
+    text-decoration: none;
+    color: #000000; 
+}
+
+.bold-text {
+    font-weight: bold;
+}
+
+
+/*grid layout for produkt-siden */
+.produkt-container {
+    display: grid;
+    gap: 20px;
+    align-items: start;
+}
+
+/*venstre kolonne: små bilder*/
+.pictures {
+    display: grid;
+    grid-template-columns: 1fr 2fr; /*små bilder venstre, stort bilde høyre */
+    gap: 1rem;
+    max-width: 700px;
+}
+
+.productpictures-small {
+    display: grid;
+    grid-template-rows: repeat(3, 1fr); /*tre like rader for små bilder*/
+    gap: 10px;
+}
+
+.productpictures-small img {
+    width: 100%;
+    object-fit: cover;
+}
+
+/* Stort bilde */
+.productpictures-big img {
+    width: 100%;
+    object-fit: cover;
+    height: 100%; /* Fyll hele høyden som kreves */
+}
+
+/* Høyre kolonne: Produktdetaljer */
+.produkt-details {
+    display: flex;
+    flex-direction: column;
+    text-align: left; /* Sørger for at teksten er venstrejustert */
+    max-width: 440px;
+}
+
+.produkt-details h1 {
+    font-size: 24px;
+    font-weight: bold;
+    margin: 0;
+}
+
+.produkt-details a{
+    font-size: 15px;
+    color: #999;
+}
+
+.produkt-details .pris {
+    font-size: 15px;
+    color: #333;
+    margin: 0;
+}
+
+.produkt-details .farge {
+    font-size: 15px;
+}
+
+.produkt-details .choose-size {
+    padding: 15px;
+    font-size: 16px;
+    width: 100%;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    border-width: 2px;
+    border-color: gray;
+}
+
+.produkt-details .add-to-basket {
+    padding: 15px;
+    font-size: 16px;
+    background-color: black;
+    color: white;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+.buttons {
+    display: flex;
+    gap: 10px; /*avstand mellom knappene*/
+    align-items: center;
+}
+
+.favorite-button {
+    padding: 15px;
+    font-size: 16px;
+    background-color: transparent;
+    border: 2px solid #000000;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+/*andre detaljer seksjoner*/
+#details-section {
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+    max-width: 440px;
+}
+
+details {
+    border-top: 2px solid black; /*legger til en sort linje for å sepparere seksjonene*/
+    padding: 10px 0;
+    margin-bottom: 10px;
+}
+
+summary {
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer; 
+    font-weight: bold;
+    list-style: none;
+}
+
+/*+ tegn*/
+.icon {
+    font-size: 15px;
+    padding-top: 5px;
+}
+
+details p {
+    margin-top: 10px;
+    font-size: 14px;
+    color: #333;
+}
+
+.pop-products-product{
+    margin: 0;
+}
+
+#product-gallery-product {
+    display: flex; /*flexbox for horizontal layout*/
+    overflow-x: auto; /*horizontal scrolling*/
+    scroll-behavior: smooth; /*smooth scrolling*/
+    padding: 1rem;
+}
+
+.product-item-product {
+    text-align: center;
+    background-color: white;
+    margin: 0;
+}
+
+.product-item-product img {
+    min-width: 40px;
+    border-radius: 1rem;
+}
+
+#product-title-product{
+    padding: 1rem;
+}
+
+#product-title-product a{
+    text-decoration: none;
+}
+
+.product-item-product {
+    background-color: white;
+    max-width: 100%;
+    text-align: center;
+    position: relative;
+}
+
+/*bildene*/
+.product-item-product img {
+    height: auto;
+    border-radius: 1rem;
+    max-width: 250px;
+}
+
+.product-item-product a{
+    text-decoration: none;
+    color:black;
+}
+
+/*tittel på produkt*/
+.product-item-product h3 {
+    font-size: 1.2rem;
+    text-align: left;
+    margin-left: 1rem;
+}
+
+/*pris på produkt*/
+.product-tekst-placement-product p {
+    font-size: 1.2rem;
+    text-align: right;
+    margin-right: 1rem;
+    color: black;
+}
+
+/*tekst for hvor mange reviews*/
+.product-item-product .review-count {
+    font-size: 1rem;
+    font-weight: bold;
+    margin-left: 1rem;
+    color: black;
+}
+
+/*plassering av productname og prisen*/
+.product-tekst-placement-product{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+/*plassering av reviews tekst og stjerner*/
+.product-reviews{
+    display: flex;
+    align-items: center;
+}
+
+/*hjerteknapp*/
+.product-item-product i.fa-heart {
+    font-size: 2rem;
+    color: #aaa;
+    position: absolute;
+    top: 20px;
+    right: 30px;
+}
+
+.reviews-number{
+    font-family: sans-serif;
+    font-weight: normal;
+    padding-left: 1rem;
+    font-size: 15px;
+}
+
+.review-1{
+    background: #fff; /* Hvit bakgrunn */
+    border-radius: 10px; /* Runde hjÃ¸rner */
+    padding: 20px; /* Innvendig avstand */
+    margin: 20px auto; /* Sentraliser og legg til margin */
+    max-width: 600px; /* Begrens bredden */
+
+}
+
+/*---------------------------------------*/
+
 
 #global-footer {
     grid-area: footer; /*setter grid-area footer*/
@@ -485,7 +814,7 @@ main {
                                             /*media only screen tilsier at dette gjelder KUN skjermer, og ikke annet som skrivere eller taleenheter*/
 
     /*definerer main-container som inneholder header, main og footer*/
-    #main-grid {
+    .main-grid {
         text-align: center;
         grid-template-areas: 
         "header header header" 
@@ -503,6 +832,7 @@ main {
         align-items: center;
         justify-content: space-between;
         background-color: #dcdcdc;
+        padding-right: 4rem; /*legger til litt ekstra padding for å gjøre header pennere på desktop*/
     }
 
     /*hjem, produkt osv. knappene*/
@@ -512,9 +842,9 @@ main {
         flex-direction: row;
         justify-content: none;
         gap: 0rem;
-        padding: 0rem clamp(0rem, 2.5vh, 2rem);
+        padding: 0rem clamp(0rem, 0.5vh, 2rem);
     }
-
+    
     #global-header nav a:nth-child(1):hover,
     #global-header nav a:nth-child(2):hover,
     #global-header nav a:nth-child(4):hover,
@@ -527,22 +857,28 @@ main {
         width: 100%; /*juster størrelse på input-feltet */
     }
 
-    #main-grid #global-header ul li a:hover {
+    #global-header ul{
+        padding: 0;
+        margin-right: 2%;
+        gap: 0;
+    }
+
+    #global-header ul li a:hover {
         color: black;
     }
 
-    #main-grid #global-header ul li a i.fa-cart-shopping, #main-grid #global-header ul li a i.fa-heart, #main-grid #global-header ul li a i.fa-user-large {
+    #global-header ul li a i.fa-cart-shopping, #main-grid #global-header ul li a i.fa-heart, #main-grid #global-header ul li a i.fa-user-large {
         transition: transform 0.3s ease; /*glatt overgangseffekt*/
     }
     
-    #main-grid #global-header ul li a:hover i.fa-cart-shopping, #main-grid #global-header ul li a:hover i.fa-heart, #main-grid #global-header ul li a:hover i.fa-user-large {
+    #global-header ul li a:hover i.fa-cart-shopping, #main-grid #global-header ul li a:hover i.fa-heart, #main-grid #global-header ul li a:hover i.fa-user-large {
         transform: scale(1.5); /*øker størrelsen med 50%*/
     }
 
 
 /*--------------------------*/
 
-    #index #main-grid h2{
+    .main-grid h2{
         font-size: 3.2rem;
     }
 
@@ -576,7 +912,7 @@ main {
     }
 
     .slide p{
-        font-size: clamp(0.7rem, 1.8vw, 2.2rem); /*dynamisk tekststørrelse*/
+        font-size: clamp(0.48rem, 1.8vw, 2.2rem); /*dynamisk tekststørrelse fram til mobil. NB: 0.48 er nærmeste jeg kom for å kunne hindre at tekst gikk over btn*/
         top: 40%; 
         left: 13%;
         width: 80%;
@@ -629,7 +965,8 @@ main {
         transition: color 0.3s ease;
     }
 
-    .product-item i.fa-heart:hover { /*når hjertet blir hovret over, vil fargen endres til rød*/
+    .product-item i.fa-heart:hover,
+    .product-item-product i.fa-heart:hover { /*når hjertet blir hovret over, vil fargen endres til rød*/
         color: rgb(199, 38, 38);
     }
 
@@ -660,14 +997,84 @@ main {
 /*--------------------------------------------*/
 
 
-    
+    .main-produkt {
+        padding-left: 100px; /* Luft på venstre side */
+        padding-right: 100px; /* Luft på høyre side */    
+        max-width: 1200px; /* Sett en breddegrense for hovedinnholdet */
+    }
 
+    /* Grid layout for produkt-delen */
+    .produkt-container {
+        grid-template-columns: 1fr 1fr; /* Én kolonne for produktinfo, én for alle bildene */
+        max-width: none;
+    }
+
+    /* Venstre kolonne: Små bilder */
+    .pictures {
+        gap: 20px;
+    }
+
+    .productpictures-small {
+        gap: 10px;
+        max-width: 160px;
+    }
+
+    /* Stort bilde */
+    .productpictures-big img {
+        max-width: 700px;
+    }
+
+    .produkt-details .choose-favoroite:hover {
+        border-color: black;
+    }
+
+    .produkt-details .add-to-basket:hover {
+        background-color: #444;
+    }
+
+    .favorite-button {
+        border: 1px solid #000000;
+    }
+
+    .favorite-button:hover {
+        background-color: #f4f4f4;
+        color: red;
+    }
+
+    summary {
+        align-items: center;
+    }
+
+    .icon {
+        font-size: 18px; /* Adjust the size of the plus sign */
+    }
+
+    #product-gallery-product {
+        max-width: 1200px;
+    }   
+
+    #product-title-product{ /*lager et grid for product title, slik at de kan ligge på samme linje i desktop*/
+        display: grid;
+        grid-template-areas: /*grid-area gjør at h2 ligger venstre, mens a ligger høyre*/
+            "h2 a";
+        align-items: center;
+    }
+
+    #product-title-product h2{
+        grid-area: h2;
+    }
+
+    #product-title-product a{
+        grid-area: a;
+        text-align: right; /*teskten ligger nå helt til høyre, for å matche h2 som ligger helt til venstre*/
+    }
 
 /*-------------------------------------------*/
 
     #global-footer{
         background-color: #dcdcdc;
         grid-template-columns: repeat(3, 1fr); /*tre kolonner for større skjermer */
+        padding-bottom: 5rem;
     }
 
     .top{
@@ -676,23 +1083,25 @@ main {
 
     .information{
         grid-column: 1;
-        margin-left: 1rem;
+        text-align: center;
         height: 100%;
     }
 
     .shortcuts{
         grid-column: 2;
-        text-align: left;
+        text-align: center;
         margin-bottom: 0rem;
-        margin-left: 1rem;
         height: 100%;
     }
     
     .social-media{
         grid-column: 3;
-        text-align: left;
-        margin-left: 1rem;
+        text-align: center;
         height: 100%;
+    }
+
+    .social-media ul{
+        justify-content: center;
     }
 
 
@@ -715,8 +1124,24 @@ main {
 
 @media only screen and (min-width: 426px) and (max-width: 750px){ /*setter tabletstørrelse alt under 751px fram til 425px*/
     
-    #main-grid h2{
+    #index .main-grid h2{
         font-size: 2.6rem;
+    }
+
+    .main-grid #global-header ul { /*lagt til for å gjøre header mer dynamisk når størrelsen nærmer seg 425px*/
+        flex-wrap:wrap;
+    }
+
+    #global-header{
+        padding-right: 0rem; /*fjerner unødvendig padding når skjermen blir mindre*/
+    }
+
+    #global-header form input { /*gitt mer plass til andre gjenstander i header*/
+        max-width: 100px;
+    }
+
+    #global-header nav a {
+        font-size: 0.85rem; /* Dynamisk fontstørrelse */
     }
 
     .categories {
